--- a/g-tools/a-sass/style.css
+++ b/g-tools/a-sass/style.css
@@ -114,17 +114,18 @@ a {
   background-color: #d976e0; }
 
 /***********/
-/* style.scss : Interpolation */
+/* style.scss */
 .rounded-top-left {
   border-top-left-radius: 10px;
   -moz-border-radius-topleft: 10px;
   -webkit-border-top-left-radius: 10px; }
 
 /* style.css */
-/*.rounded-top-left {
+.rounded-top-left {
   border-top-radius: 10px;
   -moz-border-radius-top: 10px;
-  -webkit-border-top-radius: 10px; }*/
+  -webkit-border-top-radius: 10px; }
+
 /***************/
 /* style.scss : Mixins*/
 #navbar li {
